--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>JS Practise</title>
 </head>
 <body>
-    <a href="gunHesaplama/index.html">GUN HESAPLAMA İCİN TİKLA</a>
-    <a href="indirimHesaplama/index.html">İNDİRİM HESAPLAMA İCİN TIKLA</a>
-    <a href="kullaniciadiSifre/index.html">KULLANİCİ ADİ SİFRE GİRİSİ İCİN TİKLA</a>
-    <a href="notHesaplama/index.html">FİNAL NOT HESAPLAMA İCİN TIKLA</a>
-    <a href="saatlikUcret/index.html">SAATLİK UCRET HESAPLAMA İCİN TİKLA</a>
-    <a href="sayiBulma/index.html">SAYİ BULMACA İCİN TİKLA</a>
-    <a href="taskKagitMakas/index.html">TAS KAGİT MAKAS İCİN TİKLA</a>
+    <a href="gunHesaplama/index.html">GUN HESAPLAMA İCİN TİKLA</a> <br>
+    <a href="indirimHesaplama/index.html">İNDİRİM HESAPLAMA İCİN TIKLA</a> <br>
+    <a href="kullaniciadiSifre/index.html">KULLANİCİ ADİ SİFRE GİRİSİ İCİN TİKLA</a> <br>
+    <a href="notHesaplama/index.html">FİNAL NOT HESAPLAMA İCİN TIKLA</a> <br>
+    <a href="saatlikUcret/index.html">SAATLİK UCRET HESAPLAMA İCİN TİKLA</a> <br>
+    <a href="sayiBulma/index.html">SAYİ BULMACA İCİN TİKLA</a> <br>
+    <a href="taskKagitMakas/index.html">TAS KAGİT MAKAS İCİN TİKLA</a> <br>
 </body>
 </html>
